# aioghost

./: .env.example  .gitignore  README.md  README.zh.md  pyproject.toml  renovate.json
.github/workflows/: publish.yml  release.yml  test.yml  tests.yml
scripts/: README.md  __init__.py  batch_posts.py  setup.py  test_connection.py  test_post.py
src/aioghost/: __init__.py  client.py
tests/: test_client.py
